@@ -45,7 +45,6 @@ struct state
   LONG ModeSelected;
   LONG FreqSelected;
   LONG ChannelsSelected;
-  LONG ScaleModeSelected;
   LONG InputSelected;
   LONG OutputSelected;
   LONG OutVolSelected;
