@@ -102,7 +102,7 @@ enum actionIDs {
   ACTID_UNIT, ACTID_MODE, 
   SHOWID_MODE,
 
-  ACTID_FREQ, ACTID_CHANNELS, ACTID_SCALEMODE, ACTID_OUTVOL, ACTID_MONVOL, ACTID_GAIN,
+  ACTID_FREQ, ACTID_CHANNELS, ACTID_OUTVOL, ACTID_MONVOL, ACTID_GAIN,
   ACTID_INPUT, ACTID_OUTPUT,
   SHOWID_FREQ, SHOWID_CHANNELS, SHOWID_OUTVOL, SHOWID_MONVOL, SHOWID_GAIN,
   SHOWID_INPUT, SHOWID_OUTPUT,
@@ -112,6 +112,7 @@ enum actionIDs {
   ACTID_DEBUG, ACTID_SURROUND, ACTID_ECHO, ACTID_CLIPMV,
   ACTID_CPULIMIT, SHOWID_CPULIMIT,
   ACTID_ACTIME, SHOWID_ACTIME,
+  ACTID_SCALEMODE,
   
 
   ACTID_COUNT
@@ -256,9 +257,9 @@ static void UpdateStrings(void) {
 
 
 static Object *MUIWindow,*MUIList,*MUIInfos,*MUIUnit;
-static Object *MUIFreq,*MUIChannels,*MUIScalemode,*MUIOutvol,*MUIMonvol,*MUIGain,*MUIInput,*MUIOutput;
+static Object *MUIFreq,*MUIChannels,*MUIOutvol,*MUIMonvol,*MUIGain,*MUIInput,*MUIOutput;
 static Object *MUILFreq,*MUILChannels,*MUILOutvol,*MUILMonvol,*MUILGain,*MUILInput,*MUILOutput,*MUIPlay;
-static Object *MUIDebug,*MUIEcho,*MUISurround,*MUIClipvol,*MUICpu,*MUIACTime;
+static Object *MUIDebug,*MUIEcho,*MUISurround,*MUIClipvol,*MUICpu,*MUIACTime,*MUIScalemode;
 
 LONG xget(Object * obj, ULONG attribute)
 {
@@ -277,6 +278,8 @@ static void GUINewSettings(void)
   set(MUIClipvol, MUIA_Cycle_Active, globalprefs.ahigp_ClipMasterVolume);
   set(MUICpu, MUIA_Cycle_Active, (globalprefs.ahigp_MaxCPU * 100 + 32768) >> 16);
   set(MUIACTime, MUIA_Cycle_Active, (globalprefs.ahigp_AntiClickTime * 1000 + 32768) >> 16);
+  set(MUIScalemode, MUIA_Cycle_Active, globalprefs.ahigp_ScaleMode);
+  
   GUINewUnit();
 }
 
@@ -348,17 +351,6 @@ static void GUINewMode(void)
   }
   set(MUILChannels, MUIA_Text_Contents, (ULONG) getChannels());
 
-  if( state.ChannelsDisabled || AHIBase->lib_Version < 5)
-  {
-    set(MUIScalemode, MUIA_Disabled, TRUE);
-    set(MUIScalemode, MUIA_Cycle_Active, AHI_SCALE_FIXED_SAFE);
-  }
-  else
-  {
-    set(MUIScalemode, MUIA_Disabled, FALSE);
-    set(MUIScalemode, MUIA_Cycle_Active, state.ScaleModeSelected);
-  }
-  
   Max = max(state.OutVols -1, 0);
   Sel = min(Max, state.OutVolSelected);
   Dis = Max==0;
@@ -536,7 +528,7 @@ BOOL BuildGUI(char *screenname)
 {
   Object *MUISave, *MUIUse, *MUICancel;
   Object *page1,*page2;
-  Object *MUITFreq,*MUITChannels,*MUITScalemode,*MUITOutvol,*MUITMonvol,*MUITGain,*MUITInput,*MUITOutput,*MUITDebug,*MUITEcho,*MUITSurround,*MUITClipvol,*MUITCpu,*MUITACTime;
+  Object *MUITFreq,*MUITChannels,*MUITOutvol,*MUITMonvol,*MUITGain,*MUITInput,*MUITOutput,*MUITDebug,*MUITEcho,*MUITSurround,*MUITClipvol,*MUITCpu,*MUITACTime,*MUITScalemode;
 
   UpdateStrings();
 
@@ -587,12 +579,6 @@ BOOL BuildGUI(char *screenname)
         Child, MUITChannels = SpecialButton((STRPTR)msgOptChannels),
         Child, MUIChannels = SpecialSlider(1,state.Channels,state.ChannelsSelected),
         Child, MUILChannels = SpecialLabel(getChannels()),
-        Child, MUITScalemode = SpecialButton((STRPTR)msgOptScalemode),
-        Child, MUIScalemode = CycleObject,
-          MUIA_CycleChain, 1,
-          MUIA_Cycle_Entries, ScaleLabels,
-        End,
-        Child, SpecialLabel(""),
         Child, MUITOutvol = SpecialButton((STRPTR)msgOptVolume),
         Child, MUIOutvol = SpecialSlider(0,max(state.OutVols-1,0),state.OutVolSelected),
         Child, MUILOutvol = SpecialLabel(getOutVol()),
@@ -666,6 +652,13 @@ BOOL BuildGUI(char *screenname)
           MUIA_Numeric_Format,"%ld ms",
           MUIA_Disabled, AHIBase->lib_Version <= 4,
         End,
+        Child, MUITScalemode = SpecialButton((STRPTR)msgOptScalemode),
+        Child, MUIScalemode = CycleObject,
+          MUIA_CycleChain, 1,
+          MUIA_Cycle_Entries, ScaleLabels,
+          MUIA_Cycle_Active, globalprefs.ahigp_ScaleMode,
+          MUIA_Disabled, AHIBase->lib_Version <= 4,
+        End,
       End,
       Child, HVSpace,
     End,
@@ -712,7 +705,6 @@ BOOL BuildGUI(char *screenname)
 
     DoMethod(MUITFreq, MUIM_Notify, MUIA_Pressed, TRUE, MUIWindow, 3, MUIM_Set, MUIA_Window_ActiveObject, MUIFreq);
     DoMethod(MUITChannels, MUIM_Notify, MUIA_Pressed, TRUE, MUIWindow, 3, MUIM_Set, MUIA_Window_ActiveObject, MUIChannels);
-    DoMethod(MUITScalemode, MUIM_Notify, MUIA_Pressed, TRUE, MUIWindow, 3, MUIM_Set, MUIA_Window_ActiveObject, MUIScalemode);
     DoMethod(MUITOutvol, MUIM_Notify, MUIA_Pressed, TRUE, MUIWindow, 3, MUIM_Set, MUIA_Window_ActiveObject, MUIOutvol);
     DoMethod(MUITMonvol, MUIM_Notify, MUIA_Pressed, TRUE, MUIWindow, 3, MUIM_Set, MUIA_Window_ActiveObject, MUIMonvol);
     DoMethod(MUITGain, MUIM_Notify, MUIA_Pressed, TRUE, MUIWindow, 3, MUIM_Set, MUIA_Window_ActiveObject, MUIGain);
@@ -725,6 +717,7 @@ BOOL BuildGUI(char *screenname)
     DoMethod(MUITClipvol, MUIM_Notify, MUIA_Pressed, TRUE, MUIWindow, 3, MUIM_Set, MUIA_Window_ActiveObject, MUIClipvol);
     DoMethod(MUITCpu, MUIM_Notify, MUIA_Pressed, TRUE, MUIWindow, 3, MUIM_Set, MUIA_Window_ActiveObject, MUICpu);
     DoMethod(MUITACTime, MUIM_Notify, MUIA_Pressed, TRUE, MUIWindow, 3, MUIM_Set, MUIA_Window_ActiveObject, MUIACTime);
+    DoMethod(MUITScalemode, MUIM_Notify, MUIA_Pressed, TRUE, MUIWindow, 3, MUIM_Set, MUIA_Window_ActiveObject, MUIScalemode);
 
     DoMethod(MUIWindow, MUIM_Notify, MUIA_Window_CloseRequest, TRUE, MUIApp, 2, MUIM_Application_ReturnID, MUIV_Application_ReturnID_Quit);
     DoMethod(MUISave, MUIM_Notify, MUIA_Pressed, FALSE, MUIApp, 2, MUIM_Application_ReturnID, ACTID_SAVE);
@@ -738,9 +731,9 @@ BOOL BuildGUI(char *screenname)
     DoMethod(MUICpu, MUIM_Notify, MUIA_Numeric_Value, MUIV_EveryTime, MUIApp, 2, MUIM_Application_ReturnID,  ACTID_CPULIMIT);
     DoMethod(MUIClipvol, MUIM_Notify, MUIA_Cycle_Active, MUIV_EveryTime, MUIApp, 2, MUIM_Application_ReturnID,  ACTID_CLIPMV);
     DoMethod(MUIACTime, MUIM_Notify, MUIA_Numeric_Value, MUIV_EveryTime, MUIApp, 2, MUIM_Application_ReturnID,  ACTID_ACTIME);
+    DoMethod(MUIScalemode, MUIM_Notify, MUIA_Cycle_Active, MUIV_EveryTime, MUIApp, 2, MUIM_Application_ReturnID,  ACTID_SCALEMODE);
     DoMethod(MUIFreq, MUIM_Notify, MUIA_Numeric_Value, MUIV_EveryTime, MUIV_Notify_Self, 3, MUIM_CallHook, &hookSlider, MUIV_TriggerValue);
     DoMethod(MUIChannels, MUIM_Notify, MUIA_Numeric_Value, MUIV_EveryTime, MUIV_Notify_Self, 3, MUIM_CallHook, &hookSlider, MUIV_TriggerValue);
-    DoMethod(MUIScalemode, MUIM_Notify, MUIA_Cycle_Active, MUIV_EveryTime, MUIApp, 2, MUIM_Application_ReturnID,  ACTID_SCALEMODE);
     DoMethod(MUIOutvol, MUIM_Notify, MUIA_Numeric_Value, MUIV_EveryTime, MUIV_Notify_Self, 3, MUIM_CallHook, &hookSlider, MUIV_TriggerValue);
     DoMethod(MUIMonvol, MUIM_Notify, MUIA_Numeric_Value, MUIV_EveryTime, MUIV_Notify_Self, 3, MUIM_CallHook, &hookSlider, MUIV_TriggerValue);
     DoMethod(MUIGain, MUIM_Notify, MUIA_Numeric_Value, MUIV_EveryTime, MUIV_Notify_Self, 3, MUIM_CallHook, &hookSlider, MUIV_TriggerValue);
@@ -950,15 +943,6 @@ void EventLoop(void)
         GUINewMode();
         break;
         
-      case ACTID_SCALEMODE:
-      {
-        ULONG scalemode = AHI_SCALE_FIXED_SAFE;
-
-        get(MUIScalemode, MUIA_Cycle_Active, &scalemode);
-        state.ScaleModeSelected = scalemode;
-        break;
-      }
-	
       case ACTID_PLAY:
       {
         int              unit_id;
@@ -978,9 +962,10 @@ void EventLoop(void)
       case ACTID_CPULIMIT:
       case ACTID_CLIPMV:
       case ACTID_ACTIME:
+      case ACTID_SCALEMODE:
       {
         ULONG debug = AHI_DEBUG_NONE, surround = FALSE, echo = 0, cpu = 90;
-        ULONG clip = FALSE, actime = 0;
+        ULONG clip = FALSE, actime = 0, scalemode = AHI_SCALE_FIXED_0_DB;
 
         get(MUIDebug, MUIA_Cycle_Active, &debug);
         get(MUISurround, MUIA_Cycle_Active, &surround);
@@ -988,6 +973,7 @@ void EventLoop(void)
         get(MUIClipvol, MUIA_Cycle_Active, &clip);
         get(MUICpu, MUIA_Numeric_Value, &cpu);
         get(MUIACTime, MUIA_Numeric_Value, &actime);
+        get(MUIScalemode, MUIA_Cycle_Active, &scalemode);
 
         globalprefs.ahigp_DebugLevel       = debug;
         globalprefs.ahigp_DisableSurround  = surround;
@@ -996,6 +982,7 @@ void EventLoop(void)
         globalprefs.ahigp_MaxCPU           = ((cpu << 16) + 50) / 100;
         globalprefs.ahigp_ClipMasterVolume = clip;
         globalprefs.ahigp_AntiClickTime    = ((actime << 16) + 500) / 1000;
+	globalprefs.ahigp_ScaleMode        = scalemode;
 
         break;
       }
